Add correct projection matrix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ add_definitions(${AMBF_DEFINITIONS})
 message("---> LIBS " ${catkin_INCLUDE_DIRS})
 message("---> FOUND ? " ${catkin_vdrilling_msgs_FOUND})
 
-add_library(camera_projection_override SHARED plugins/camera_projection_override/projection_override.cpp plugins/camera_projection_override/projection_override.h)
+add_library(camera_projection_override SHARED 
+    plugins/camera_projection_override/projection_override.cpp
+    plugins/camera_projection_override/projection_override.h)
+
 target_link_libraries(camera_projection_override ${AMBF_LIBRARIES})
 set_property(TARGET camera_projection_override PROPERTY POSITION_INDEPENDENT_CODE TRUE)
