--- a/ADF/world/world_stereo.yaml
+++ b/ADF/world/world_stereo.yaml
@@ -60,14 +60,28 @@ cameraL:
   publish depth: True
   publish depth resolution: { width: 640, height: 480 }
   # multipass: True
-  # Custom projection matrix
-  projection matrix: 
-  [[ 3.95190771e-03, -1.29151582e-03,  6.05664029e+00, 0.0],
-   [ 0.00000000e+00,  6.58651286e-03,  7.74458917e+00, 0.0],
-   [ 0.00000000e+00,  0.00000000e+00, -1.00200200e+00, -2.00200200e-02],
-   [ 0.00000000e+00,  0.00000000e+00, -1.00000000e+00,  0.00000000e+00]]
 
-   
+  
+  # Custom projection matrix
+  plugins: [
+    {
+      name: camera_projection_override,
+      path: ../../build/,
+      filename: libcamera_projection_override.so
+    }
+  ]
+  
+  # projection matrix: 
+  #   [[ 5.05844187,  0.        , -0.65314025,  0.        ],
+  #      [ 0.        ,  6.74458917,  1.45976421,  0.        ],
+  #      [ 0.        ,  0.        , -1.002002  , -0.02002002],
+  #      [ 0.        ,  0.        , -1.        ,  0.        ]]
+
+  projection matrix: 
+    [[ 5.05844187,  0.        ,  1.65314025,  0.        ],
+      [ 0.        ,  6.74458917,  2.45976421,  0.        ],
+      [ 0.        ,  0.        , -1.002002  , -0.02002002],
+      [ 0.        ,  0.        , -1.        ,  0.        ]]
 
 cameraL2:
   namespace: cameras/
@@ -91,14 +105,6 @@ cameraL2:
   publish depth: True
   publish depth resolution: { width: 640, height: 480 }
   # multipass: True
-
-  plugins: [
-    {
-      name: camera_projection_override,
-      path: ../../build/plugins/camera_projection_override,
-      filename: libcamera_projection_override.so
-    }
-  ]
 
 
 
